--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "azureFunctions.deploySubpath": ".",
     "azureFunctions.scmDoBuildDuringDeployment": true,
-    "azureFunctions.pythonVenv": "venvv",
+    "azureFunctions.pythonVenv": ".venv",
+    "python.defaultInterpreterPath": "C:\\Users\\Nabil\\AppData\\Local\\Programs\\Python\\Python311\\python.exe",
     "azureFunctions.projectLanguage": "Python",
     "azureFunctions.projectRuntime": "~4",
     "debug.internalConsoleOptions": "neverOpen",
